# halg

./: .gitignore  ChangeLog.md  LICENSE  README.md  TODO.md  halg.cabal  package.yaml  stack.yaml
Halg/: MergeSort.hs  TwoThreeBST.hs
Halg/Sort/: InsertionSort.hs  MergeSort.hs  Quicksort.hs  ShellSort.hs
src/Halg/Sort/: Heapsort.hs  MergeSort.hs  SelectionSort.hs
