name:                halg
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/johnsonwj/halg#readme
license:             BSD3
license-file:        LICENSE
author:              William Johnson
maintainer:          johns.willj@gmail.com
copyright:           Copyright: (c) 2016 William Johnson
category:            Unclassefied
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Halg.Sort.SelectionSort
    Halg.Sort.InsertionSort
    Halg.Sort.ShellSort
    Halg.Sort.MergeSort
    Halg.Sort.Quicksort
    Halg.Sort.Heapsort
  build-depends:
    base    >= 4.7  && < 5,
    array
  default-language:    Haskell2010

executable halg-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , halg
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/johnsonwj/halg
